--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Mon Blog</title>
 </head>
 <body>
-   <h1> HTML test </h1>
+    <div class="container">
+
+        <h1 class="mb-4"> Articles du Blog</h1>
+    </div>
+   <h1> <%= articles %> </h1> 
    
+   <!-- <%= articles %>  me permet d'écrire le texte dans le server.js  res.render('index', {articles: 'bonjour'}) -->
 
 </body>
 </html>
