ajout du bouton

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,11 @@
 </head>
 <body>
     <div class="container">
-
+<!-- mb-4 est le margin bottom de 4 unité dans bootstrap -->
         <h1 class="mb-4"> Articles du Blog</h1>
+        <a href="/articles/new" class="btn btn-success"> Nouvel Article</a>
     </div>
-   <h1> <%= articles %> </h1> 
+   <!-- <h1> <%= articles %> </h1>  -->
    
    <!-- <%= articles %>  me permet d'écrire le texte dans le server.js  res.render('index', {articles: 'bonjour'}) -->
 
